# GLSLChecker

./: .gitignore  CMakeLists.txt  LICENSE  README.md
defs/: block.json  builtin_function.json  builtin_input.json  builtin_output.json  number.json  param_qualifier.json  precision_qualifier.json  predef_macro.json  preprocessor.json  reserved.json  storage_qualifier.json  usercfg.json  value.json
libtinyhl/: CMakeLists.txt  glctxnotify.cpp  glctxnotify.h  glsl.cpp  glsl.h  syntaxhighlighter.cpp  syntaxhighlighter.h
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
